<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_trash_notes"
        android:title="@string/trash" />

    <item
        android:id="@+id/nav_tags"
        android:icon="@drawable/ic_tag"
        android:title="@string/tags_management" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_interface_set"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_backups"
        android:icon="@drawable/ic_backup_restore"
        android:title="@string/settingsBackups" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help_title" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/aboutApps" />

</menu>
