<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/heart_face"
        android:layout_gravity="center"
        android:contentDescription="@string/thanksImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/thanks_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:text="@string/thanks_donate" />

    <Button
        android:id="@+id/closeDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/close"
        android:layout_gravity="center" />

</LinearLayout>
